# ffmpegTest

./: .gitmodules  README.md  build.gradle
app/: .gitignore  build.gradle  copy.sh
app/src/androidTest/java/com/mx/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.mk  AudioConverter.cpp  AudioConverter.h  CMakeLists.txt  GLVideo.cpp  MediaConverter.cpp  MediaConverter.h  build-all.sh  build-ffmpeg.sh  ffmpeg.mk  mx_native_crash_collector.c  native-lib.cpp  shader.h  version_script
app/src/main/cpp/android/JniUtils/: NXAndroidJni.c  NXAndroidJni.h  NXAndroidJniBase.h  NXAndroidOSBuild.c
app/src/main/cpp/concurrent/: Thread.cpp  Thread.h
app/src/main/cpp/effect/: BaseEffect.cpp  BaseEffect.h  GLUtil.cpp  GLUtil.h  Matrix.cpp  Matrix.h  TestEffect.cpp  TestEffect.h  TextureCopy.cpp  TextureCopy.h  ZEffect.cpp  ZEffect.h
app/src/main/cpp/mediacodec/: NXMediaCodecDecJni.cpp  NXMediaCodecDecJni.h  NXMediaCodecDecLib.c  NXMediaCodecEncInterface.c  NXMediaCodecEncInterface.h  NXMediaCodecEncJni.c  NXMediaCodecEncJni.h  NXMediaCodecEncLib.c  NXUtilCodecInfoProcess.cpp  NXUtilCodecInfoProcess.h  NXUtilComputeTime.c  NXUtilComputeTime.h
app/src/main/cpp/mediacodec/android/JniUtils/: NXAndroidAllClass.c  NXAndroidAllClass.h  NXAndroidDef.h  NXAndroidJniBase.c  NXAndroidOSBuild.h
app/src/main/cpp/mediaconvert/: MediaConverter2.cpp
app/src/main/cpp/thread/: Thread.cpp
app/src/main/java/com/mx/audio/: AsyncAudioConverter.kt  AudioConverter.kt
app/src/main/java/com/mx/myapplication/: App.kt  AudioConverter.kt  EntryActivity.kt  GLActivity.kt  LaunchActivity.kt  MainActivity.kt
app/src/main/java/com/mxtech/: NCException.java  NativeCrashCollector.java
app/src/main/java/com/mxtech/av/: AsyncAudioConverter.kt  AsyncMediaConverter.kt  AsyncMediaConverter2.kt  AudioConverter.kt  GLVideo.kt  MediaConverter.kt  MediaConverter2.kt  NXAvcEncoder.java
app/src/main/java/com/nxinc/videoedit/VMediacodec/: NXAvcEncoder.java
app/src/main/res/layout/: activity_entry.xml  activity_gl.xml
app/src/test/java/com/mx/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
